# posthog-dev-pulumi

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  Pulumi.yaml  README.md  __main__.py  config.py  constants.py  network.py  pyproject.toml  vm.py  vms.yaml
startup_scripts/: __init__.py  full_startup.py
startup_scripts/sections/: __init__.py  base.py  monitoring.py  posthog.py  remote_desktop.py  shell.py  tools.py
