[project]
name = "posthog-dev-pulumi"
version = "0.1.0"
description = "Pulumi project for PostHog development VMs on GCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-gcp>=8.0.0,<10.0.0",
    "pyyaml>=6.0",
]

[tool.uv]
# This is an application, not a library - don't try to build it
package = false
